Name: Piyush Files: Dockerfile, docker-compose.yaml, requirements.txt, pandas_read_s3.py Reason: Added Dockerfile for custom image build along with installation of python dependencies for pandas_read_s3.py

--- a/airflow_docker/docker-compose.yaml
+++ b/airflow_docker/docker-compose.yaml
@@ -50,8 +50,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
-  # build: .
+  #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
+  build: .
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -161,6 +161,7 @@ services:
       <<: *airflow-common-env
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
+      # Install apache-airflow-providers-amazon package
       DUMB_INIT_SETSID: "0"
     restart: always
     depends_on:
@@ -248,6 +249,7 @@ services:
         fi
         mkdir -p /sources/logs /sources/dags /sources/plugins
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
+        
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
