--- a/airflow_docker/docker-compose.yaml
+++ b/airflow_docker/docker-compose.yaml
@@ -250,6 +250,9 @@ services:
         mkdir -p /sources/logs /sources/dags /sources/plugins
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
         
+        # Add this line to copy requirements.txt
+        # cp /sources/requirements.txt /opt/airflow/requirements.txt
+        
         exec /entrypoint airflow version
     # yamllint enable rule:line-length
     environment:
