--- a/airflow_docker/docker-compose.yaml
+++ b/airflow_docker/docker-compose.yaml
@@ -51,7 +51,9 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
-  build: .
+  build:
+    context: .
+    dockerfile: Dockerfile.airflow
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -77,7 +79,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-..}/spark_scripts:/opt/spark/work-dir
+    - ${AIRFLOW_PROJ_DIR:-.}/spark_scripts:/opt/spark/work-dir
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -301,6 +303,18 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-
+  spark:
+    build:
+      context: .
+      dockerfile: Dockerfile.spark
+    command: bash -c "/bin/spark-class org.apache.spark.deploy.master.Master"
+    ports:
+      - "7077:7077"
+    expose:
+      - "8080"
+    environment:
+        SPARK_MASTER_HOST: spark
+        SPARK_MASTER_PORT: 7077
+        SPARK_MASTER_WEBUI_PORT: 8080
 volumes:
   postgres-db-volume:
